# phenopy

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  README.md  conftest.py  development.txt  hpo_graph_with_RANDOM_data.pickle  hpo_graph_with_data.pickle  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: pythonpackage.yml  pythonpublish.yml
conf/: phenosim.ini.example
notebooks/: clustering.ipynb
phenopy/: __init__.py  __main__.py  build_hpo.py  cluster.py  config.py  d2p.py  hpo_array.py  ic.py  likelihood.py  network.py  obo.py  p2g.py  plot.py  score.py  util.py  weights.py
phenopy/data/: cluster_phenotype_groups.txt  lgb.model.pkl  oa_phenotype_age.tsv  phenotype_groups.txt
phenopy/termscores/: make_term_scores_array.py
phenoseries/: build.py  experiment.py  phenoseries.requirements.txt  rank.py  score.py
phenosim/: __init__.py  __main__.py  cluster.py  config.py  ic.py  network.py  obo.py  p2g.py  score.py  scoreterms.py  util.py
tests/: test_cluster.py  test_d2p.py  test_ic.py  test_likelihood.py  test_network.py  test_obo.py  test_p2g.py  test_plot.py  test_score.py  test_util.py  test_weights.py
tests/data/: case.hpo.txt  case1.txt  case2.txt  cluster_two_groups.txt  hp-age.obo  hp.obo  phenotype.hpoa  phenotype_age.tsv  phenotype_groups_4.txt  phenotype_to_genes-age.txt  phenotype_to_genes.txt  phenotypes_to_genes.txt  test.score-all.txt  test.score-one-patient.txt  test.score-product-age.txt  test.score-product.txt
tests/fixtures/: get_data_dictionary.py
