[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "phenopy"
version = "0.5.3"
description = "Phenotype comparison scoring by semantic similarity."
authors = [
    "Kevin Arvai <karvai@genedx.com>",
    "Kyle Retterer <retterer@genedx.com>",
    "Carlos Borroto <cborroto@genedx.com>",
    "Vlad Gainullin <vgainullin@genedx.com>",
    "Vincent Ustach <vustach@genedx.com>"
]
readme = "README.md"
license = ""

[tool.poetry.scripts]
phenopy = "phenopy.__main__:main"

[tool.poetry.urls]
homepage = "https://github.com/GeneDx/phenopy"
"Bug Tracker" = "https://github.com/GeneDx/phenopy/issues"

[tool.poetry.dependencies]
python = "^3.7"
fire = "*"
gensim = "*"
networkx = "*"
numpy = "*"
obonet = "*"
pandas = "^1.0.0"
joblib = "*"
scipy = "*"
lightgbm = "3.0.0"
requests = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"

[tool.ruff]
line-length = 88
