[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "phenopy"
version = "0.5.3"
description = "Phenotype comparison scoring by semantic similarity."
authors = [
    "Kevin Arvai <karvai@genedx.com>",
    "Kyle Retterer <retterer@genedx.com>",
    "Carlos Borroto <cborroto@genedx.com>",
    "Vlad Gainullin <vgainullin@genedx.com>",
    "Vincent Ustach <vustach@genedx.com>",
    "Stephen McGee <smcgee@genedx.com>"
]
readme = "README.md"
license = ""

[tool.poetry.scripts]
phenopy = "phenopy.__main__:main"

[tool.poetry.urls]
homepage = "https://github.com/GeneDx/phenopy"
"Bug Tracker" = "https://github.com/GeneDx/phenopy/issues"

[tool.poetry.dependencies]
python = "^3.7"
fire = "^0.5.0"
gensim = "3.8.1"
networkx = "^2.6.3"
numpy = "^1.23.5"
obonet = "^1.0.0"
pandas = "^1.5.2"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
ruff = "^0.0.264"

[tool.ruff]
line-length = 88
